; ModuleID = '/home/carl/AnghaBench/linux/drivers/leds/extr_leds-netxbig.c_gpio_ext_set_value.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/leds/extr_leds-netxbig.c_gpio_ext_set_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netxbig_gpio_ext = type { i32 }

@gpio_ext_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.netxbig_gpio_ext*, i32, i32)* @gpio_ext_set_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gpio_ext_set_value(%struct.netxbig_gpio_ext* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.netxbig_gpio_ext*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.netxbig_gpio_ext* %0, %struct.netxbig_gpio_ext** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i64, i64* %7, align 8
  %9 = call i32 @spin_lock_irqsave(i32* @gpio_ext_lock, i64 %8)
  %10 = load %struct.netxbig_gpio_ext*, %struct.netxbig_gpio_ext** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @gpio_ext_set_addr(%struct.netxbig_gpio_ext* %10, i32 %11)
  %13 = load %struct.netxbig_gpio_ext*, %struct.netxbig_gpio_ext** %4, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @gpio_ext_set_data(%struct.netxbig_gpio_ext* %13, i32 %14)
  %16 = load %struct.netxbig_gpio_ext*, %struct.netxbig_gpio_ext** %4, align 8
  %17 = call i32 @gpio_ext_enable_select(%struct.netxbig_gpio_ext* %16)
  %18 = load i64, i64* %7, align 8
  %19 = call i32 @spin_unlock_irqrestore(i32* @gpio_ext_lock, i64 %18)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @gpio_ext_set_addr(%struct.netxbig_gpio_ext*, i32) #1

declare dso_local i32 @gpio_ext_set_data(%struct.netxbig_gpio_ext*, i32) #1

declare dso_local i32 @gpio_ext_enable_select(%struct.netxbig_gpio_ext*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
